--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,9 @@
     <string name="app_name">BudgetApp</string>
     <string name="action_settings">Settings</string>
     <string name="section_format">%1$s</string>
+
+    <!-- Settings strings -->
+    <string name="title_settings">Settings</string>
+    <string name="save_button">Save</string>
+    <string name="cancel_button">Cancel</string>
 </resources>
