--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="title_settings">Settings</string>
     <string name="save_button">Save</string>
     <string name="cancel_button">Cancel</string>
+    <string name="net_income_hint">Enter your net income</string>
 </resources>
