--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,13 @@
 
     <!-- Settings strings -->
     <string name="title_settings">Settings</string>
+    <string name="net_income_hint">Enter your net income</string>
+
+    <!-- Entry strings -->
+    <string name="title_entry">Add new bill or expense</string>
+
+    <!-- Button strings -->
     <string name="save_button">Save</string>
     <string name="cancel_button">Cancel</string>
-    <string name="net_income_hint">Enter your net income</string>
+
 </resources>
