--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,20 +2,18 @@
     <string name="app_name">BudgetApp</string>
     <string name="action_settings">Settings</string>
     <string name="section_format">%1$s</string>
-
     <string name="app_bar">%1$s</string>
 
     <!-- Dashboard strings -->
 
     <!-- Settings strings -->
     <string name="title_settings">Settings</string>
-    <string name="net_income_hint">Enter your net income</string>
+    <string name="edit_net_income_hint">Enter your net income</string>
 
     <!-- Entry strings -->
     <string name="edit_bill_name_hint">Name of bill</string>
     <string name="edit_bill_cost_hint">Cost of bill</string>
     <string name="text_bill_due">Bill is due on</string>
-
     <string name="edit_expense_name_hint">Name of expense</string>
     <string name="edit_expense_limit_hint">Limit of expense</string>
     <string name="text_expense_type">Select expense category</string>
