--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="text_list_view_bill_name">%1$s</string>
     <string name="text_list_view_bill_cost">Cost: %1$s</string>
     <string name="text_list_view_bill_due">Due on %1$s</string>
+    <string name="text_list_view_bill_paid">Paid</string>
 </resources>
