--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,9 +22,13 @@
     <string name="save_button">Save</string>
     <string name="cancel_button">Cancel</string>
 
-    <!-- Bill strings-->
+    <!-- Bill strings -->
     <string name="text_list_view_bill_name">%1$s</string>
     <string name="text_list_view_bill_cost">Cost: %1$s</string>
     <string name="text_list_view_bill_due">Due on %1$s</string>
     <string name="text_list_view_bill_paid">Paid</string>
+
+    <!-- Expense Strings -->
+    <string name="text_list_view_expense_name">%1$s</string>
+    <string name="text_list_view_expense_status">You have spent $%1$s out of your $%2$s limit.</string>
 </resources>
